// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/branch/automerge commitFilesToBranch applies semantic prefix 1`] = `
Array [
  Array [
    "renovate/some-branch",
    Array [
      Object {
        "contents": "some contents",
        "name": "package.json",
      },
    ],
    "some-prefix some commit message",
    undefined,
  ],
]
`;

exports[`workers/branch/automerge commitFilesToBranch commits files 1`] = `
Array [
  Array [
    "renovate/some-branch",
    Array [
      Object {
        "contents": "some contents",
        "name": "package.json",
      },
    ],
    "some commit message",
    undefined,
  ],
]
`;
